8224151: Test vmTestbase/nsk/sysdict/vm/stress/chain/chain007/chain007.java might hang with release binaries

Fix deadlock on ClassLoaderDataGraph_lock and g1 clear_claimed_marks.

Reviewed-by: tschatzl, lfoltan, eosterlund